src/main/resources/tests/Semantics/bad/endFunction.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
function ExampleFunction (X : integer) return integer is
begin
   return X + 1;
end AnotherFunction; -- Doit générer une erreur de compilation.
begin
   ExampleFunction (3);
end ExampleProcedure;
